Fix compound widgets not having separation when line wrapped

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -732,6 +732,8 @@ fieldset.form__group--compound {
     }
 
     > .controls {
+        margin-bottom: -5px;
+
         @include respond-min($screen-small) {
             > .input-group {
                 display: inline-flex;
@@ -760,11 +762,9 @@ fieldset.form__group--compound {
         > .control__label,
         &:first-child > .control__label,
         > .input-group {
-            margin-top: 5px;
+            margin-bottom: 5px;
 
             @include respond-min($screen-small) {
-                margin-top: 0;
-
                 &:not(:last-child) {
                     margin-right: 10px;
                 }
